#109 Use toList directly on streams