@@ -5,7 +5,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * HotelRoom class. Contains a Collection of amenities, a ReservationCalendar,
@@ -153,7 +152,7 @@ public class HotelRoom {
   public final Collection<String> getAmenities() {
     List<String> amen = amenities.stream()
         .map((a) -> a.name())
-        .collect(Collectors.toList());
+        .toList();
     Collections.sort(amen);
     return amen;
   }
